# AgenticOfficeBuddy

./: .env.example  .gitignore  README.md  demo.py  demo_advanced.py  demo_multi_agent.py  demo_supervisor.py  langgraph.json  pyproject.toml  requirements.txt  test_agentic_rag.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
notebooks/: Agentic_RAG.ipynb  Embedding_RAG.ipynb  RAG_basics.ipynb
src/officebuddy/: __init__.py  vector_store.py
src/officebuddy/agents/: __init__.py  advanced_rag_agent.py  agentic_rag.py  langgraph_supervisor_rag.py  multi_agent_rag.py  official_supervisor_rag.py  prompts.py  supervisor_rag_agent.py
