[project]
name = "officebuddy"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain[openai]>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.12",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "notebook>=7.4.5",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.11.0",
    "langchain-text-splitters>=0.3.11",
    "langsmith>=0.4.28",
    "langgraph-cli[inmem]>=0.4.2",
]
