[project]
name = "officebuddy"
version = "0.1.0"
description = "Agentic RAG system with LangGraph - multi-agent orchestration for document retrieval and Q&A"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=2.1.12",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.0.10",
    "langgraph-supervisor>=0.0.31",
    "langgraph-cli[inmem]>=0.4.2",
    "langsmith>=0.7.10",
    "notebook>=7.4.5",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.12.0",
]
